--- a/index.html
+++ b/index.html
@@ -58,8 +58,9 @@
             </div>
         </form>
         
-        <a href="order-form-2.html">Click here to go to order form.</a>
-
+        <a href="order-form-2.html">Click here to go to order form.</a><br>
+        
+        <a href="simple.html">CLICK HERE FOR CLASS ASSIGNMENT</a>
     <script src="app.js"></script>
     <script src="day.js"></script>
 </body>
